# lumios

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
application/: CmakeLists.txt
application/src/: main.cpp
assets/scripts/: fps_controller.cpp  player_controller.cpp  rotator.cpp
editor/: CMakeLists.txt
editor/src/: editor_app.cpp  editor_app.h  editor_panels.cpp  editor_panels.h  editor_renderer.cpp  editor_renderer.h  game_window.cpp  game_window.h  main.cpp
install/x64-debug/include/: lumios.h
install/x64-debug/lib/: glfw3.lib  lumios.lib
install/x64-debug/lib/cmake/: TinyGLTFTargets.cmake
install/x64-debug/lib/pkgconfig/: glfw3.pc
lumios/: CMakeLists.txt
lumios/src/: defines.h  lumios.cpp  lumios.h
lumios/src/assets/: loader.cpp  loader.h
lumios/src/core/: event.h  input.cpp  input.h  log.cpp  log.h  timer.h  types.h
lumios/src/core/memory/: smart_resource.h
lumios/src/core/utils/: logger.cpp  logger.h  time.h
lumios/src/graphics/: camera.h  gpu_types.h  renderer.h
lumios/src/graphics/backend/: graphics_backend.cpp  graphics_backend.h
lumios/src/graphics/backend/directx12/: dx12_backend.cpp  dx12_backend.h
lumios/src/graphics/backend/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_instance.cpp  vulkan_logical_device.cpp  vulkan_physical_device.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp  vulkan_validator.cpp
lumios/src/graphics/backend/vulkan/vulkan_utils/: vulkan_instance.cpp  vulkan_instance.h
lumios/src/graphics/config/: graphics_config.cpp  graphics_config.h
lumios/src/graphics/frontend/: graphics_frontend.cpp  graphics_frontend.h
lumios/src/graphics/vulkan/: vk_buffer.cpp  vk_buffer.h  vk_common.h  vk_descriptors.cpp  vk_descriptors.h  vk_init.cpp  vk_init.h  vk_mem.cpp  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_swapchain.cpp  vk_swapchain.h  vk_texture.cpp  vk_texture.h
lumios/src/math/: math.h
lumios/src/networking/: interest_manager.cpp  interest_manager.h  net_transport.h  net_types.h  state_replicator.cpp  state_replicator.h  zone_manager.cpp  zone_manager.h
lumios/src/physics/: physics_components.h  physics_world.cpp  physics_world.h
lumios/src/platform/: window.cpp  window.h
lumios/src/scene/: components.h  scene.h  scene_serializer.cpp  scene_serializer.h
lumios/src/scripting/: lumios_api.h  script_manager.cpp  script_manager.h
lumios/src/shaders/: bloom_blur.frag  bloom_threshold.frag  mesh.frag  mesh.vert  particle.comp  particle.frag  particle.vert  pick.frag  pick.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  ssao.frag  tonemap.frag  tonemap.vert
lumios/src/shaders/binaries/: bloom_blur.frag.spv  bloom_threshold.frag.spv  mesh.frag.spv  mesh.vert.spv  particle.comp.spv  particle.frag.spv  particle.vert.spv  pick.frag.spv  pick.vert.spv  shadow.vert.spv  skybox.frag.spv  skybox.vert.spv  ssao.frag.spv  tonemap.frag.spv
scripts/: CMakeLists.txt  player_controller.cpp  rotator.cpp
